# py-llm-terminology-extraction

./: pyproject.toml  requirements.txt
code/: main.py
config/: __init__.py  settings.toml
data/: test1.md  test2.md  test3.md  test4.md
