[tool.poetry]
name = "py-llm-terminology-extraction"
version = "0.1.0"
description = ""
authors = ["Manuel Souto Pico <m.soutopico@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.25.1"
langchain = "^0.1.17"
python-dotenv = "^1.0.1"
notebook = "^7.1.3"
ipython = "^8.24.0"
chromadb = "^0.5.0"
google-api-python-client = "^2.127.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.0"
tomli = "^2.0.1"
requests = "^2.31.0"
pypdf = "^4.2.0"
markdown = "^3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
